--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -1,12 +1,11 @@
-.App {
-  text-align: center;
+body{
+  background: #eaeaea
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.ui.fixed.menu{
+  background-image: linear-gradient(135deg, rgb(24, 42, 115) 0%, rgb(33, 138, 174) 69%, rgb(32, 167, 172) 89%);
+}
+
+.ui.main.container{
+  margin-top: 7em
 }
